--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-i18next": "^13.2.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.8",
+    "swiper": "^10.3.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
