additinal set up

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "react-homework-template",
+  "name": "VibeStyle",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://VladM4526.github.io/VibeStyle/",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "i18next": "^23.5.1",
-    "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^13.2.2",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0",
